// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches Button dark expandMd toggleCollapse 1`] = `
.c0 {
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  border: 1px solid #343a40;
  background-color: #343a40;
  border-radius: 0.25rem;
  display: inline-block;
  display: none;
  font-size: 1rem;
  color: #fff;
  padding: 0.375rem 0.75rem;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(52,58,64,0.5);
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #343a40;
  background-color: #343a40;
  color: #fff;
  cursor: pointer;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  border: 1px solid #201a1d;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  background-color: #23272b;
}

.c0:focus,
.c0:hover {
  border: 1px solid #201a1d;
}

.c0:focus,
.c0:hover {
  background-color: #23272b;
}

@media (max-width:992px) {
  .c0 {
    display: block;
    color: rgba(255,255,255,0.5);
    border-color: rgba(255,255,255,0.1);
  }

  .c0:hover,
  .c0:focus {
    color: rgba(255,255,255,0.5);
    border-color: rgba(255,255,255,0.1);
  }
}

<button
  className="c0"
/>
`;

exports[`Styles matches Button dark expandSm toggleCollapse 1`] = `
.c0 {
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  border: 1px solid #343a40;
  background-color: #343a40;
  border-radius: 0.25rem;
  display: inline-block;
  display: none;
  font-size: 1rem;
  color: #fff;
  padding: 0.375rem 0.75rem;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(52,58,64,0.5);
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #343a40;
  background-color: #343a40;
  color: #fff;
  cursor: pointer;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  border: 1px solid #201a1d;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  background-color: #23272b;
}

.c0:focus,
.c0:hover {
  border: 1px solid #201a1d;
}

.c0:focus,
.c0:hover {
  background-color: #23272b;
}

@media (max-width:576px) {
  .c0 {
    display: block;
    color: rgba(255,255,255,0.5);
    border-color: rgba(255,255,255,0.1);
  }

  .c0:hover,
  .c0:focus {
    color: rgba(255,255,255,0.5);
    border-color: rgba(255,255,255,0.1);
  }
}

<button
  className="c0"
/>
`;

exports[`Styles matches Button light expandMd toggleCollapse 1`] = `
.c0 {
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  border: 1px solid #f0f0f0;
  background-color: #f0f0f0;
  border-radius: 0.25rem;
  display: inline-block;
  display: none;
  font-size: 1rem;
  color: #212529;
  padding: 0.375rem 0.75rem;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(248,249,250,0.5);
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #f0f0f0;
  background-color: #f0f0f0;
  color: #212529;
  cursor: pointer;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  border: 1px solid #cccecf;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  background-color: #e2e6ea;
}

.c0:focus,
.c0:hover {
  border: 1px solid #cccecf;
}

.c0:focus,
.c0:hover {
  background-color: #e2e6ea;
}

@media (max-width:768px) {
  .c0 {
    display: block;
    color: rgba(0,0,0,0.5);
    border-color: rgba(0,0,0,0.1);
  }

  .c0:hover,
  .c0:focus {
    color: rgba(0,0,0,0.5);
    border-color: rgba(0,0,0,0.1);
  }
}

<button
  className="c0"
/>
`;

exports[`Styles matches Button light expandMd toggleCollapse 2`] = `
.c0 {
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  border: 1px solid #f0f0f0;
  background-color: #f0f0f0;
  border-radius: 0.25rem;
  display: inline-block;
  display: none;
  font-size: 1rem;
  color: #212529;
  padding: 0.375rem 0.75rem;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(248,249,250,0.5);
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #f0f0f0;
  background-color: #f0f0f0;
  color: #212529;
  cursor: pointer;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  border: 1px solid #cccecf;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  background-color: #e2e6ea;
}

.c0:focus,
.c0:hover {
  border: 1px solid #cccecf;
}

.c0:focus,
.c0:hover {
  background-color: #e2e6ea;
}

@media (max-width:1200px) {
  .c0 {
    display: block;
    color: rgba(0,0,0,0.5);
    border-color: rgba(0,0,0,0.1);
  }

  .c0:hover,
  .c0:focus {
    color: rgba(0,0,0,0.5);
    border-color: rgba(0,0,0,0.1);
  }
}

<button
  className="c0"
/>
`;
